--- a/config.json
+++ b/config.json
@@ -2,9 +2,13 @@
   "prefix": "-",
   "ownerID": "211521218896068609",
   "fabian": "211521218896068609",
-  "logchannel": "555348984961695744",
-  "statuschannel": "539838505774350348",
   "te18b": "483928522809802762",
   "epicminemen": "413797995205885973",
-  "botsnspam": "483931673784877066"
+
+  "channels": {
+    "suggestions": "866106762423304232",
+    "logs": "555348984961695744",
+    "status": "866106833424875530",
+    "bns": "483931673784877066"
+  }
 }
