add base rolls to config

--- a/config.json
+++ b/config.json
@@ -11,5 +11,10 @@
     "status": "866106833424875530",
     "bns": "483931673784877066",
     "dev": "556801338550386688"
+  },
+
+  "counts": {
+    "rollsPerHour": 10,
+    "wishlistSlots": 10
   }
 }
